# Twitch-harvest

./: .env  .env.example  .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/scripts/: generate_context.py
.github/workflows/: ci.yml  update_context.yml
config/: settings.yaml
config/streamers/: example.yaml
data/: state.db
remotion/: package-lock.json  package.json  tsconfig.json
remotion/scripts/: render.mjs
remotion/src/: Root.tsx  TikTokClip.legacy.tsx  types.ts
remotion/src/TwitchClip/: CaptionOverlay.tsx  TitleOverlay.tsx  index.tsx  styles.ts
src/: main.py
src/api/: dashboard.py  twitch.py
src/clipper/: extractor.py
src/core/: config.py  db.py  errors.py  events.py  logging.py
src/detector/: chat_signals.py  chat_velocity.py  emote_spam.py  scorer.py
src/editor/: ai_analyzer.py  caption_renderer.py  clip_edit_queue.py  font_manager.py  processor.py  transcriber.py  video_editor.py
src/orchestrator/: harvest.py  pipeline.py
src/publisher/: telegram_notifier.py
src/twitch_viral_clipper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/watcher/: audio_capture.py  chat_capture.py  video_capture.py
tests/: test_ai_analyzer.py  test_detector.py  test_edit_command.py  test_telegram_notifier.py  test_video_editor.py
