[project]
name = "twitch-viral-clipper"
version = "0.1.0"
description = "Auto-clipper Twitch -> TikTok pipeline"
requires-python = ">=3.12"
dependencies = [
    "twitchio>=2.9",
    "httpx>=0.27",
    "aiofiles>=24.1",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "loguru>=0.7",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]
# phase 2+
editor = ["faster-whisper>=1.0", "opencv-python>=4.10", "mediapipe>=0.10"]
ai = ["anthropic>=0.39"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
